--- a/U2/meta/run.yaml
+++ b/U2/meta/run.yaml
@@ -4,18 +4,21 @@ config_set:
     bootcmd: python3 u2.py
     shell: true
     env:
-         F1_ADDR: 172.101.0.10
-         F1_LAN_ADDR: 172.102.0.10
-         F1_HTTP_PORT: 2433
-         F1_SSH_PORT: 2434
+      F1_ADDR: 172.101.0.10
+      F1_LIST_ADDR: 0.0.0.0
+      F1_LAN_ADDR: 172.102.0.10
+      F1_HTTP_PORT: 2433
+      F1_SSH_PORT: 2434
 
-         U1_ADDR: 172.102.0.5
-         U1_HTTP_PORT: 20433
-         U1_SSH_PORT: 20022
+      U1_ADDR: 172.102.0.5
+      U1_LIST_ADDR: 0.0.0.0
+      U1_HTTP_PORT: 20433
+      U1_SSH_PORT: 20022
 
-         U2_ADDR: 172.102.0.6
-         U2_IN_PORT: 22221
-         U2_OUT_PORT: 22223
+      U2_ADDR: 172.102.0.6
+      U2_LIST_ADDR: 0.0.0.0
+      U2_IN_PORT: 22221
+      U2_OUT_PORT: 22223
 
-         WAN_ADDR: 172.101.0.0/24
-         LAN_ADDR: 172.102.0.0/24
+      WAN_ADDR: 172.101.0.0/24
+      LAN_ADDR: 172.102.0.0/24
