--- a/dnsmasq-utils/dnsmasq-lan-rsx217.conf
+++ b/dnsmasq-utils/dnsmasq-lan-rsx217.conf
@@ -4,3 +4,4 @@ no-dhcp-interface=ens18
 dhcp-range=172.102.0.4;172.102.0.15,255.255.255.0,172.102.0.255
 dhcp-host=2c:4d:11:12:11:1,172.102.0.5
 dhcp-host=2c:4d:11:12:11:2,172.102.0.6
+dhcp-host=2c:4d:11:12:11:10,172.102.0.10
