add dummy interface for bridge

--- a/dnsmasq-utils/dnsmasq-lan-rsx217.conf
+++ b/dnsmasq-utils/dnsmasq-lan-rsx217.conf
@@ -1,7 +1,9 @@
-port=0
-interface=lan-rsx217
+port=56
+interface=eth-lan-rsx217
+listen-address=172.102.0.1 
+bind-interfaces
 no-dhcp-interface=ens18
-dhcp-range=172.102.0.4;172.102.0.15,255.255.255.0,172.102.0.255
+dhcp-range=172.102.0.4,172.102.0.15,12h
 dhcp-host=2c:4d:11:12:11:1,172.102.0.5
 dhcp-host=2c:4d:11:12:11:2,172.102.0.6
 dhcp-host=2c:4d:11:12:11:10,172.102.0.10
