--- a/dnsmasq-utils/dnsmasq-wan-rsx217.conf
+++ b/dnsmasq-utils/dnsmasq-wan-rsx217.conf
@@ -1,6 +1,8 @@
-port=0
-interface=wan-rsx217
+port=55
+interface=eth-wan-rsx217
+listen-address=172.101.0.1
+bind-interfaces
 no-dhcp-interface=ens18
-dhcp-range=172.101.0.4;172.101.0.15,255.255.255.0,172.101.0.255
+dhcp-range=172.101.0.4,172.101.0.15,12h
 dhcp-host=2c:4d:11:12:11:10,172.101.0.10
 dhcp-host=2c:4d:11:12:11:03,172.101.0.11
